--- a/index.html
+++ b/index.html
@@ -69,32 +69,66 @@ a:active {
 
 
 /* styles for navigation */
+
 #nav {
+
+
 	background-color: #751c54;
+  overflow: hidden;
+
 }
 #nav ul {
 	list-style:none;
+
+  overflow: hidden;
 } 
 #nav ul li {
+  overflow: hidden;
 	font-weight: normal;
     text-transform: uppercase;
 }
 #nav ul a:link {
+  overflow: hidden;
     color: #fff;
   }
 #nav ul a:visited {
+  overflow: hidden;
     color: #fff;
   }
 #nav ul a:focus {
+  overflow: hidden;
 	color:#FC6
 }
 #nav ul a:hover {
+  overflow: hidden;
     color: #fc6;
   }
 #nav ul a:active {
+  overflow: hidden;
 	color:#F00;
 }
-	
+
+#nav li   {
+  float: left;
+  overflow: hidden;
+ 
+}
+#nav ul {
+  width: 19.5em;
+  margin-right: auto;
+  margin-left: auto;
+}
+#nav ul li a {
+ 
+  display: block;
+  padding: .5em;
+  border: 1px solid #ba89ba;
+  border-radius: .5em;
+  margin: .25em;
+  overflow: hidden;
+
+}
+
 /* styles for the products section */
 
 #products {
@@ -104,9 +138,18 @@ a:active {
   padding: 1em;
   border: double #FFBC53;
   margin: 1em;
+  clear: both;
+  overflow: hidden;
   }
+#products img{
+  float: left;
+  margin-right: 6px;
+  margin-bottom: 6px;
+}
 
-
+.more {
+  clear: left;
+}
 
 #products h2 {
   font-size: 1.2em;
@@ -190,13 +233,13 @@ p#copyright {
   <h3>Barware</h3>
 <p><img src="images/glasses.jpg" alt="photo of glasses decorated with the letter R"></p>
 <p><em>The perfect wedding gift.</em> Our highest quality glassware is sandblasted by hand with the character of your choice. Choose from 30 characters and 24 typefaces. Custom designs are also available for an additional design charge. Allow 2 to 4 weeks for delivery. </p>
-<p><a href="#">More about custom barware...</a> </p>
+<p class="more"><a  href="#">More about custom barware...</a> </p>
 
 
 <h3>Babyware</h3>
 <p><img src="images/shirts.jpg"alt="photos of shirts personalized with initial letters"></p>
 <p><em>Tired of sickly-sweet?</em> These onesies with oversized letters in bold, bright patterns are a welcome change from the usual pastel fare. Monogrammed pants and baby shoes are also available. Tell us the initial and mix and match from 6 fun fabric patterns and 8 edging colors. Allow 2 to 4 weeks for delivery. Sizes: 3mos, 6mos, and 12mos.</p>
-<p><a href="#">More about our onesies...</a> </p>
+<p class="more"><a  href="#">More about our onesies...</a> </p>
 
 </div>
 
